--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
 
     <section id="onboarding">
         <div class="container">
-            <div class="head"><a href="./index.html"><img class="fade-in" src="./images/logo.png" alt="home"></a>
+            <div class="head">
                 <h1 class="fade-in">Start Your Journey with Us</h1>
             </div>
             <p class="fade-in">I'm Christian Treasure, a passionate web developer dedicated to creating beautiful and
@@ -29,28 +29,13 @@
                 turning ideas into reality through code.
             </p>
 
-            <h2 class="fade-in">Skills Overview</h2>
+            <h2 class="fade-in">Key Skills Overview</h2>
             <ul class="skills-list">
-                <li class="fade-in">HTML5: <progress value="90" max="100"></progress></li>
-                <li class="fade-in">CSS3: <progress value="85" max="100"></progress></li>
-                <li class="fade-in">JavaScript: <progress value="80" max="100"></progress></li>
+                <li class="fade-in">HTML: <progress value="90" max="100"></progress></li>
+                <li class="fade-in">CSS: <progress value="85" max="100"></progress></li>
+                <li class="fade-in">JS: <progress value="80" max="100"></progress></li>
                 <li class="fade-in">React: <progress value="75" max="100"></progress></li>
             </ul>
-
-            <h2 class="fade-in">Featured Projects</h2>
-            <div class="project fade-in">
-                <h3>WebDeves</h3>
-                <p>I recreated the official WebDeves website using HTML, CSS, JavaScript, and Tailwind CSS, without any
-                    edits or modifications.</p>
-                <a href="#" class="button">Live Demo</a>
-                <a href="#" class="button">GitHub Repo</a>
-            </div>
-            <div class="project fade-in">
-                <h3>Crunchies Online </h3>
-                <p>Crunches Online delivers your favorite meals fast, from top restaurants to your doorstep.</p>
-                <a href="#" class="button">Live Demo</a>
-                <a href="https://github.com/trenzyfx1/crunches-online-" target="_blank" class="button">GitHub Repo</a>
-            </div>
 
             <h2 class="fade-in">Hobbies & Interests</h2>
             <p class="fade-in">In my free time, I enjoy Reading / Central Cee's music .</p>
@@ -63,7 +48,7 @@
             <p class="fade-in">Ready to see more? Check out my projects or feel free to reach out for collaboration!</p>
 
             <h2 class="fade-in">Contact Information</h2>
-            <form class="fade-in" id="contact-form">
+            <form class="fade-in" action="https://formspree.io/f/xeoaegbr" method="POST">
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name" placeholder="Christian Treasure" required>
 
@@ -77,7 +62,7 @@
             </form>
 
             <footer class="fade-in">
-                <p>Let’s connect! <a href="https://www.linkedin.com/in/christian-treasure-b46882336/" target="_blank">LinkedIn</a> | <a href="https://github.com/trenzyfx1" target="_blank">GitHub</a>
+                <p>Let’s connect! <a href="https://www.linkedin.com/in/christian-treasure-b46882336/" target="_blank">LinkedIn</a> | <a href="https://github.com/trenzyfx1" target="_blank">GitHub</a> | <a href="./index.html">To Home</a>
                 </p>
             </footer>
         </div>
