--- a/index.html
+++ b/index.html
@@ -1,20 +1,32 @@
 <!-- DESIGNED AND DEVELOPED BY ME: CHRISTIAN DAVID TREASURE - PROFESSIONAL FRONT-END DEVELOPER -->
 
-
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
-    <meta name="author" content="christian Treasure">
-    <meta name="discription"
-        content="programer account, web developer, website developer, frontend developer, portfolio, frontend portfolio, web programer">
+    <meta name="author" content="Christian Treasure">
+    <meta name="description" content="Christian Treasure is a professional front-end developer specializing in modern web design and development. Explore his portfolio to see innovative and high-quality projects.">
+    <meta name="robots" content="index, follow">
+    <meta name="keywords" content="Front-End Developer, Web Developer, UI/UX Designer, Portfolio">
+    <meta name="language" content="English">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="./images/logo.png" type="image/x-icon">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="theme-color" content="#ff6600">
+
+    <meta property="og:title" content="Christian Treasure | Front-End Developer">
+    <meta property="og:description" content="A professional front-end developer building high-quality, responsive websites. Check out my portfolio.">
+    <meta property="og:image" content="https://christian-treasure.vercel.app/images/preview.png">
+    <meta property="og:url" content="https://christian-treasure.vercel.app/">
+    <meta name="twitter:card" content="summary_large_image">
+
+    <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
+
     <link rel="stylesheet" href="/CSS Minifier/all.min.css">
-    <link rel="stylesheet" href="./CSS Minifier/style.css">
-    <link rel="stylesheet" href="./CSS Minifier/bot.css">
-    <title>Christian Treasure | front end developer</title>
+    <link rel="stylesheet" href="/CSS Minifier/style.css" as="style">
+    <link rel="stylesheet" href="/CSS Minifier/bot.css">
+
+    <title>Christian Treasure | Front-End Developer</title>
 </head>
 
 <body>
@@ -22,6 +34,7 @@
         <div class="potfolio">
             <a href="#"><img src="./images/logo.png" alt="home"></a>
         </div>
+
         <nav>
             <ul class="top-nav">
                 <li class="top-list"><a href="#"><i class="fas fa-home"></i></a>
@@ -43,6 +56,7 @@
                 </li>
             </ul>
         </nav>
+
         <div class="top-button">
             <button onclick="location.href='#about-us'" class="about-us" type="button">About me</button>
             <button onclick="location.href='#contact-us'" class="contact-us" type="button">Contact me</button>
@@ -53,6 +67,7 @@
         <div class="potfolio">
             <a href="#"><img src="./images/logo.png" alt="home"></a>
         </div>
+
         <nav>
             <ul class="top-nav">
                 <li class="top-list"><a id="home" href="#"><i class="fas fa-home"></i></a>
@@ -74,9 +89,11 @@
                 </li>
             </ul>
         </nav>
+
         <div class="menu-icon" id="menu-icon">
             <i class="fa fa-bars"></i>
         </div>
+
         <div class="top-button menu" id="menu">
             <div class="close-icon" id="close-icon">&times;</div>
             <button onclick="location.href='#about-us'" class="about-us" type="button">About me</button>
@@ -92,6 +109,7 @@
                 a web developer who is about <br>
                 to take the industry by storm.
             </p>
+
             <div class="my-i">
                 <a href="https://github.com/trenzyfx1" target="_blank"><i class="fab fa-github"></i></a>
                 <a href="https://www.facebook.com/profile.php?id=61568275677168" target="_blank"><i
@@ -102,6 +120,7 @@
                         class="fab fa-linkedin"></i></a>
             </div>
         </div>
+
         <div class="me-2 text">
             <h2>hey there, <span class="wave">👋🏿</span></h2>
             <h1 class="normal">i'm Christian Treasure <br>
@@ -121,6 +140,7 @@
                 user experiences. Specialize in transforming ideas <br>
                 into beautifully crafted products.
             </p>
+
             <div class="experience section">
                 <div><span>+2</span><br>
                     years of <br>
@@ -145,6 +165,7 @@
                 <div>
                     <img class="crunchies" src="./images/chicken.PNG" alt="crunchies online">
                 </div>
+
                 <div class="write-up">
                     <div class="pbutton">
                         <h2>crunch</h2>
@@ -166,10 +187,12 @@
                     </div>
                 </div>
             </div>
+
             <div class="projects section">
                 <div>
                     <img class="bnb" src="./images/bnb.PNG" alt="metabnb">
                 </div>
+
                 <div class="write-up">
                     <div class="pbutton">
                         <h2>bnb</h2>
@@ -194,10 +217,12 @@
                     </div>
                 </div>
             </div>
+
             <div class="projects section">
                 <div>
                     <img class="policy" src="./images/Capture.PNG" alt="insurance policy">
                 </div>
+
                 <div class="write-up">
                     <div class="pbutton">
                         <h2>policy</h2>
@@ -222,6 +247,7 @@
                     </div>
                 </div>
             </div>
+
             <div class="resume">
                 <button
                     onclick="window.open('//drive.google.com/file/d/16SGgIsbRDyb-vG9dxmMoWPD6bpqtQdX8/view?usp=drive_link', '_blank')"
@@ -241,6 +267,7 @@
                         <div class="glow-border"></div>
                         <img src="./images/linux-icon.png" alt="Linux Clipboard App">
                     </div>
+
                     <div>
                         <h3>Frontend Development</h3>
                         <p>Worked on multiple projects using HTML, CSS, JavaScript, Tailwind CSS
@@ -253,6 +280,7 @@
                         <div class="glow-border"></div>
                         <img src="./images/react-icon.png" alt="React Library">
                     </div>
+
                     <div>
                         <h3>UI/UX Design</h3>
                         <p>Designed sleek, modern, and user-friendly interfaces for client projects while maintaining
@@ -265,6 +293,7 @@
                         <div class="glow-border"></div>
                         <img src="./images/freelance-icon.png" alt="Freelance Project">
                     </div>
+
                     <div>
                         <h3>Web Animation & Effects</h3>
                         <p>Implemented interactive animations, smooth transitions, and engaging user experiences using
@@ -277,6 +306,7 @@
                         <div class="glow-border"></div>
                         <img src="./images/team-lead-icon.png" alt="Team Lead">
                     </div>
+
                     <div>
                         <h3>Team Collaboration</h3>
                         <p>Worked closely with designers, developers, and clients to deliver top-tier web solutions with
@@ -326,6 +356,7 @@
                         <p>Design Tool</p>
                     </div>
                 </div>
+
                 <div onclick="window.open('//github.com/trenzyfx1/')" class="tool">
                     <img class="github" src="images/github.webp" alt="GitHub">
                     <div class="tool-text">
@@ -333,6 +364,7 @@
                         <p>Repository</p>
                     </div>
                 </div>
+
                 <div onclick="window.open('//fontawesome.com/')" class="tool">
                     <img src="images/fontawsome.png" alt="Font">
                     <div class="tool-text">
@@ -340,6 +372,7 @@
                         <p>Fonts Download</p>
                     </div>
                 </div>
+
                 <div onclick="window.open('//www.lemonsqueezy.com/')" class="tool">
                     <img src="./images/lemon.jpeg" alt="Lemon">
                     <div class="tool-text">
@@ -347,6 +380,7 @@
                         <p>Payment Approval</p>
                     </div>
                 </div>
+
                 <div onclick="window.open('//www.framer.com/?via=anh72&gad_source=1&gclid=Cj0KCQjw4cS-BhDGARIsABg4_J1e-Zq-HM9ZKBxl-Xfd031eisQ-tqb41uI0Za4oy7J05ihiZ1pcRAUaAjSTEALw_wcB/')"
                     class="tool">
                     <img src="images/framer.png" alt="Framer">
@@ -355,6 +389,7 @@
                         <p>Website Builder</p>
                     </div>
                 </div>
+
                 <div onclick="window.open('//www.notion.com/')" class="tool">
                     <img src="images/Notion.webp" alt="Notion">
                     <div class="tool-text">
@@ -382,6 +417,7 @@
                 development, continually refining my skills to create innovative solutions. <br>
                 Let's build something amazing together!
             </p>
+
             <p class="p2">
                 I’m a passionate front-end developer specializing in creating intuitive, responsive,
                 and visually appealing websites using HTML, CSS, JavaScript, and frameworks like React or Vue.js.
@@ -395,6 +431,7 @@
                     <source src="./videos/frontend.mp4" type="video/mp4">
                 </video>
             </div>
+
             <h2>watch video</h2>
         </div>
     </div>
@@ -407,6 +444,7 @@
                     <h2><img class="paper" src="./images/paper.png" alt="">contact me</h2>
                     <article></article>
                 </div>
+
                 <div class="input2">
                     <div class="input-section">
                         <div class="input1">
@@ -434,6 +472,7 @@
                                 </div>
                             </form>
                         </div>
+
                         <div class="contact-container">
                             <div class="contact-info">
                                 <div class="contact-item">
@@ -449,6 +488,7 @@
                                     <span>Port Harcourt - Rivers State , nigeria 500001</span>
                                 </div>
                             </div>
+
                             <div class="social-icons">
                                 <a href="https://github.com/trenzyfx1" target="_blank"><i class="fab fa-github"></i></a>
                                 <a href="https://www.facebook.com/profile.php?id=61568275677168" target="_blank"><i
@@ -460,6 +500,7 @@
                                         class="fab fa-linkedin"></i></a>
                             </div>
                         </div>
+
                         <div>
                             <div class="vertical-text">contact</div>
                             <section></section>
@@ -471,10 +512,12 @@
                                 <i class="fa fa-at"></i>
                                 <span>rolemodel987@gmail.com</span>
                             </div>
+
                             <div class="contact-item">
                                 <i class="fa fa-phone"></i>
                                 <span>+2347047889687</span>
                             </div>
+
                             <div class="contact-item">
                                 <i class="fa fa-location-dot"></i>
                                 <span>Port Harcourt - Nigeria 500001</span>
@@ -485,13 +528,16 @@
             </div>
         </div>
     </div>
+
     <div>
         <a href="" id="scrollTopBtn">⬆ Scroll to Top</a>
     </div>
 
     <footer>
         <p>&copy; <span id="year"></span> Copyright <a href="https://github.com/trenzyfx1" target="_blank">Christian
-                Treasure</a> All Rights Reserved </p>
+                Treasure</a> All Rights Reserved 
+        </p>
+
         <div class="footer-links">
             <a href="./faq.html">FAQ</a> <span>|</span>
             <a href="./onboard.html">Onboarding</a> <span>|</span>
@@ -502,6 +548,7 @@
 
     <div class="chatbot-container">
         <div class="bot-intro">Hi, how can I assist?</div>
+
         <div class="chatbot">
             <div class="chat-header">
                 <span>Trenzy Bot 🤖</span>
@@ -513,6 +560,7 @@
                 <button id="send-btn">Send</button>
             </div>
         </div>
+        
         <button class="chat-toggle">💬</button>
     </div>
 
