--- a/onboard.html
+++ b/onboard.html
@@ -2,15 +2,18 @@
 
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Christian Treasure">
+    <meta name="description" content="Onboarding - Get started with Christian Treasure's services and projects.">
+
+    <title>Onboarding | Christian Treasure</title>
+
     <link rel="stylesheet" href="./CSS Minifier/onboard.css">
     <link rel="stylesheet" href="./CSS Minifier/all.min.css">
-    <link rel="icon" href="./images/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="./CSS Minifier/bot.css">
-    <title>Onboarding</title>
+    <link rel="icon" href="./images/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -22,11 +25,13 @@
                 <p>Discover my work and skills in a seamless experience.</p>
                 <a href="./index.html">To Home</a>
             </div>
+
             <div class="slide">
                 <h2>Contact Me</h2>
                 <p>Email: Rolemodel987gmail.com <br> LinkedIn: /Christian (Code Gem) Treasure</p>
                 <a class="chat" href="https://wa.link/ytz8gg" target="_blank"><i class="fab fa-whatsapp"></i> Chat With Me</a>
             </div>
+
             <div class="slide">
                 <h2>Let's Connect</h2>
                 <p>Feel free to reach out for collaborations or opportunities.</p>
@@ -51,6 +56,7 @@
                 <span>Trenzy Bot 🤖</span>
                 <button class="close-chat">&times;</button>
             </div>
+            
             <div class="chat-body" id="chat-body"></div>
             <div class="chat-footer">
                 <input type="text" id="chat-input" placeholder="Type your message...">
