--- a/contact.html
+++ b/contact.html
@@ -2,14 +2,17 @@
 
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Christian Treasure">
+    <meta name="description" content="Contact Christian Treasure - Get in touch for web development projects and collaborations.">
+
+    <title>Contact | Christian Treasure</title>
+
     <link rel="stylesheet" href="./CSS Minifier/contact.css">
     <link rel="stylesheet" href="./CSS Minifier/bot.css">
-    <link rel="icon" href="./images/logo.png" type="image/x-icon">
-    <title>Onboarding</title>
+    <link rel="icon" href="./images/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -19,6 +22,7 @@
             <div class="head">
                 <h1 class="fade-in">Start Your Journey with Us</h1>
             </div>
+
             <p class="fade-in">I'm Christian Treasure, a passionate web developer dedicated to creating beautiful and
                 functional web experiences.
             </p>
@@ -75,6 +79,7 @@
                 <span>Trenzy Bot 🤖</span>
                 <button class="close-chat">&times;</button>
             </div>
+
             <div class="chat-body" id="chat-body"></div>
             <div class="chat-footer">
                 <input type="text" id="chat-input" placeholder="Type your message...">
