--- a/faq.html
+++ b/faq.html
@@ -2,15 +2,17 @@
 
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <meta name="author" content="christian Treasure">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="./images/logo.png" type="image/x-icon">
+    <meta name="author" content="Christian Treasure">
+    <meta name="description" content="Frequently Asked Questions - Get answers to common inquiries about Christian Treasure's work and services.">
+
+    <title>FAQ | Christian Treasure</title>
+
     <link rel="stylesheet" href="./CSS Minifier/faq.css">
     <link rel="stylesheet" href="./CSS Minifier/bot.css">
-    <title>FAQ</title>
+    <link rel="icon" href="./images/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
