--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -2,14 +2,17 @@
 
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy</title>
+    <meta name="author" content="Christian Treasure">
+    <meta name="description" content="Privacy Policy - Learn how Christian Treasure handles user data and privacy.">
+
+    <title>Privacy Policy | Christian Treasure</title>
+
     <link rel="stylesheet" href="./CSS Minifier/privacy-policy.css">
     <link rel="stylesheet" href="./CSS Minifier/bot.css">
-    <link rel="icon" href="./images/logo.png" type="image/x-icon">
+    <link rel="icon" href="./images/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -75,6 +78,7 @@
                 <span>Trenzy Bot 🤖</span>
                 <button class="close-chat">&times;</button>
             </div>
+            
             <div class="chat-body" id="chat-body"></div>
             <div class="chat-footer">
                 <input type="text" id="chat-input" placeholder="Type your message...">
