--- a/index.html
+++ b/index.html
@@ -27,6 +27,16 @@
     <link rel="stylesheet" href="/CSS Minifier/bot.css">
 
     <title>Christian Treasure | Front-End Developer</title>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXS2HRSNWE"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-XXS2HRSNWE');
+    </script>
 </head>
 
 <body>
@@ -534,9 +544,7 @@
     </div>
 
     <footer>
-        <p>&copy; <span id="year"></span> Copyright <a href="https://github.com/trenzyfx1" target="_blank">Christian
-                Treasure</a> All Rights Reserved 
-        </p>
+        <p>&copy; <span id="year"></span> Copyright <a href="https://github.com/trenzyfx1" target="_blank">Christian Treasure</a> All Rights Reserved </p>
 
         <div class="footer-links">
             <a href="./faq.html">FAQ</a> <span>|</span>
@@ -560,7 +568,7 @@
                 <button id="send-btn">Send</button>
             </div>
         </div>
-        
+
         <button class="chat-toggle">💬</button>
     </div>
 
