--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -13,6 +13,16 @@
     <link rel="stylesheet" href="./CSS Minifier/privacy-policy.css">
     <link rel="stylesheet" href="./CSS Minifier/bot.css">
     <link rel="icon" href="./images/favicon.ico" type="image/x-icon">
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXS2HRSNWE"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-XXS2HRSNWE');
+    </script>
 </head>
 
 <body>
