--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -23,6 +23,8 @@
 
         gtag('config', 'G-XXS2HRSNWE');
     </script>
+
+    <script type="text/javascript" data-cmp-ab="1" src="https://cdn.consentmanager.net/delivery/autoblocking/f34c3a5322528.js" data-cmp-host="c.delivery.consentmanager.net" data-cmp-cdn="cdn.consentmanager.net" data-cmp-codesrc="16"></script>
 </head>
 
 <body>
